--- a/app/static/css/lolhf.css
+++ b/app/static/css/lolhf.css
@@ -204,6 +204,70 @@ hr.divider {
     width: 100px;
 }
 
-.input-group .form-control{
+.input-group .form-control {
     width: 450px;
 }
+
+/*sponsor-wall*/
+.sponsorListHolder {
+    margin-bottom: 30px;
+}
+
+.sponsor {
+    width: 140px;
+    height: 140px;
+    float: left;
+    margin: 4px;
+    position: relative;
+    cursor: pointer;
+}
+
+.sponsorFlip {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border: 1px solid #ddd;
+    background: url("../img/background.jpg") no-repeat center center #f9f9f9;
+}
+
+.sponsorFlip:hover {
+    border: 1px solid #999;
+    -moz-box-shadow: 0 0 30px #999 inset;
+    -webkit-box-shadow: 0 0 30px #999 inset;
+    box-shadow: 0 0 30px #999 inset;
+}
+
+.sponsorFlip img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -70px 0 0 -70px;
+}
+
+.sponsorData {
+    display: none;
+}
+
+.sponsorDescription {
+    font-size: 11px;
+    padding: 50px 10px 20px 20px;
+    font-style: italic;
+}
+
+.sponsorURL {
+    font-size: 10px;
+    font-weight: bold;
+    padding-left: 20px;
+}
+
+#sponsor-wall {
+    /*position: relative;*/
+    margin: 40px 140px;
+    width: 480px;
+    float: right;
+}
+
+
+
