--- a/app/templates/help.html
+++ b/app/templates/help.html
@@ -1,7 +1,201 @@
 {% extends "base.html" %}
 {% set active_page = 'help' -%}
 {% block title %}&nbsp;&nbsp;&nbsp;支持本站-撸韩服{% endblock %}
+{% block scripts %}
+    {{ super() }}
+    <script type="text/javascript" src="{{ url_for('static',filename='js/jquery-ui.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static',filename='js/jquery.flip.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static',filename='js/script.js') }}"></script>
+{% endblock %}
 {% block pagecontent %}
+    <div id="sponsor-wall">
+        <h3 class="page-header">赞助墙</h3>
+        <div class="sponsorListHolder">
+            <div class="sponsor" title="Click to flip">
+                <div class="sponsorFlip">
+                    <img src="../static/img/sponsors/canon.png" width="140" height="140"/>
+                </div>
+                <div class="sponsorData">
+                    <div class="sponsorDescription">
+                        One of the biggest computer manufacturs
+                    </div>
+                    <div class="sponsorURL">
+                        <a href="http://www.sd131.com">www.sd131.com</a>
+                    </div>
+                </div>
+            </div>
+            <div class="sponsor" title="Click to flip">
+                <div class="sponsorFlip">
+                    <img src="../static/img/sponsors/cisco.png"/>
+                </div>
+                <div class="sponsorData">
+                    <div class="sponsorDescription">
+                        One of the biggest computer manufacturs
+                    </div>
+                    <div class="sponsorURL">
+                        <a href="http://www.sd131.com">www.sd131.com</a>
+                    </div>
+                </div>
+            </div>
+            <div class="sponsor" title="Click to flip">
+                <div class="sponsorFlip">
+                    <img src="../static/img/sponsors/dell.png"/>
+                </div>
+                <div class="sponsorData">
+                    <div class="sponsorDescription">
+                        One of the biggest computer manufacturs
+                    </div>
+                    <div class="sponsorURL">
+                        <a href="http://www.sd131.com">www.sd131.com</a>
+                    </div>
+                </div>
+            </div>
+            <div class="sponsor" title="Click to flip">
+                <div class="sponsorFlip">
+                    <img src="../static/img/sponsors/digg.png"/>
+                </div>
+                <div class="sponsorData">
+                    <div class="sponsorDescription">
+                        One of the biggest computer manufacturs
+                    </div>
+                    <div class="sponsorURL">
+                        <a href="http://www.sd131.com">www.sd131.com</a>
+                    </div>
+                </div>
+            </div>
+            <div class="sponsor" title="Click to flip">
+                <div class="sponsorFlip">
+                    <img src="../static/img/sponsors/ea.png"/>
+                </div>
+                <div class="sponsorData">
+                    <div class="sponsorDescription">
+                        One of the biggest computer manufacturs
+                    </div>
+                    <div class="sponsorURL">
+                        <a href="http://www.sd131.com">www.sd131.com</a>
+                    </div>
+                </div>
+            </div>
+            <div class="sponsor" title="Click to flip">
+                <div class="sponsorFlip">
+                    <img src="../static/img/sponsors/ebay.png"/>
+                </div>
+                <div class="sponsorData">
+                    <div class="sponsorDescription">
+                        One of the biggest computer manufacturs
+                    </div>
+                    <div class="sponsorURL">
+                        <a href="http://www.sd131.com">www.sd131.com</a>
+                    </div>
+                </div>
+            </div>
+            <div class="sponsor" title="Click to flip">
+                <div class="sponsorFlip">
+                    <img src="../static/img/sponsors/facebook.png"/>
+                </div>
+                <div class="sponsorData">
+                    <div class="sponsorDescription">
+                        One of the biggest computer manufacturs
+                    </div>
+                    <div class="sponsorURL">
+                        <a href="http://www.sd131.com">www.sd131.com</a>
+                    </div>
+                </div>
+            </div>
+            <div class="sponsor" title="Click to flip">
+                <div class="sponsorFlip">
+                    <img src="../static/img/sponsors/google.png"/>
+                </div>
+                <div class="sponsorData">
+                    <div class="sponsorDescription">
+                        One of the biggest computer manufacturs
+                    </div>
+                    <div class="sponsorURL">
+                        <a href="http://www.sd131.com">www.sd131.com</a>
+                    </div>
+                </div>
+            </div>
+            <div class="sponsor" title="Click to flip">
+                <div class="sponsorFlip">
+                    <img src="../static/img/sponsors/hp.png"/>
+                </div>
+                <div class="sponsorData">
+                    <div class="sponsorDescription">
+                        One of the biggest computer manufacturs
+                    </div>
+                    <div class="sponsorURL">
+                        <a href="http://www.sd131.com">www.sd131.com</a>
+                    </div>
+                </div>
+            </div>
+            <div class="sponsor" title="Click to flip">
+                <div class="sponsorFlip">
+                    <img src="../static/img/sponsors/microsoft.png"/>
+                </div>
+                <div class="sponsorData">
+                    <div class="sponsorDescription">
+                        One of the biggest computer manufacturs
+                    </div>
+                    <div class="sponsorURL">
+                        <a href="http://www.sd131.com">www.sd131.com</a>
+                    </div>
+                </div>
+            </div>
+            <div class="sponsor" title="Click to flip">
+                <div class="sponsorFlip">
+                    <img src="../static/img/sponsors/mysql.png"/>
+                </div>
+                <div class="sponsorData">
+                    <div class="sponsorDescription">
+                        One of the biggest computer manufacturs
+                    </div>
+                    <div class="sponsorURL">
+                        <a href="http://www.sd131.com">www.sd131.com</a>
+                    </div>
+                </div>
+            </div>
+            <div class="sponsor" title="Click to flip">
+                <div class="sponsorFlip">
+                    <img src="../static/img/sponsors/sony.png"/>
+                </div>
+                <div class="sponsorData">
+                    <div class="sponsorDescription">
+                        One of the biggest computer manufacturs
+                    </div>
+                    <div class="sponsorURL">
+                        <a href="http://www.sd131.com">www.sd131.com</a>
+                    </div>
+                </div>
+            </div>
+            <div class="sponsor" title="Click to flip">
+                <div class="sponsorFlip">
+                    <img src="../static/img/sponsors/vimeo.png"/>
+                </div>
+                <div class="sponsorData">
+                    <div class="sponsorDescription">
+                        One of the biggest computer manufacturs
+                    </div>
+                    <div class="sponsorURL">
+                        <a href="http://www.sd131.com">www.sd131.com</a>
+                    </div>
+                </div>
+            </div>
+            <div class="sponsor" title="Click to flip">
+                <div class="sponsorFlip">
+                    <img src="../static/img/sponsors/yahoo.png"/>
+                </div>
+
+                <div class="sponsorData">
+                    <div class="sponsorDescription">
+                        One of the biggest computer manufacturs
+                    </div>
+                    <div class="sponsorURL">
+                        <a href="http://www.sd131.com">www.sd131.com</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="aboutsite">
         <div class="page-header">
             <h3>关于本站&nbsp;&nbsp;
