--- a/app/templates/ladder.html
+++ b/app/templates/ladder.html
@@ -2,7 +2,7 @@
 {% set active_page = 'ladder' -%}
 {% block title %}&nbsp;&nbsp;&nbsp;天梯-撸韩服{% endblock %}
 {% block pagecontent %}
-    <div class="page-header"><h1>天梯</h1></div>
+    <div class="page-header"><h1>LOL韩服天梯</h1></div>
     <div class="btn-grp btn-padding">
         <a class="btn btn-primary btn-ladder" href="{{ url_for('main.ladder',type='full') }}" role="button">查看完整天梯</a>
         <a class="btn btn-default btn-ladder" href="{{ url_for('main.ladder',type='pro') }}" role="button">只看职业选手</a>
