--- a/app/static/css/lolhf.css
+++ b/app/static/css/lolhf.css
@@ -23,6 +23,10 @@ body {
     width: 100%;
 }
 
+.carousel-caption{
+    margin-left: auto;
+}
+
 /*hr*/
 hr.divider {
     margin: 40px 0;
@@ -252,7 +256,7 @@ hr.divider {
     font-weight: bold;
     font-size: 20px;
     color: #4169E1;
-    font-family: 'Microsoft YaHei',Georgia, Serif, serif;
+    font-family: 'Microsoft YaHei', Georgia, Serif, serif;
     margin-left: 25%;
 }
 
