--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,39 +14,37 @@
         </ol>
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+                <img src="../static/img/banner/20161113-1.png" alt="First slide">
                 <div class="carousel-caption">
-                    <h1>Example headline.</h1>
-                    <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web
-                        browser security rules.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+                    <a class="btn btn-lg btn-primary" href="{{ url_for('main.ladder') }}" role="button">查看天梯</a>
+                    <a class="btn btn-lg btn-primary" href="{{ url_for('main.query')}}" role="button">自定义查询</a>
                 </div>
             </div>
             <div class="item">
-                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+                <img src="../static/img/material/7d496edc9ec60c06d4b10df41ace93ae.jpg" alt="Second slide">
                 <div class="carousel-caption">
-                    <h1>Example headline.</h1>
-                    <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web
-                        browser security rules.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+{#                    <h1>Example headline.</h1>#}
+{#                    <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web#}
+{#                        browser security rules.</p>#}
+{#                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>#}
                 </div>
             </div>
             <div class="item">
-                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+                <img src="../static/img/material/7892ba7f44ba7eb1adef44c7f50c7fd1.jpg" alt="Third slide">
                 <div class="carousel-caption">
-                    <h1>Example headline.</h1>
-                    <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web
-                        browser security rules.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+{#                    <h1>Example headline.</h1>#}
+{#                    <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web#}
+{#                        browser security rules.</p>#}
+{#                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>#}
                 </div>
             </div>
             <div class="item">
-                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Fourth slide">
+                <img src="../static/img/material/c10bb5e29dcc2f4d0042ba4b9b8a4505.jpg" alt="Fourth slide">
                 <div class="carousel-caption">
-                    <h1>Example headline.</h1>
-                    <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web
-                        browser security rules.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+{#                    <h1>Example headline.</h1>#}
+{#                    <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web#}
+{#                        browser security rules.</p>#}
+{#                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>#}
                 </div>
             </div>
         </div>
