update logo banner and icon

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,8 +6,8 @@
 {% endblock %}
 {% block head %}
 {{ super() }}
-<link rel="shotcut icon" href="{{ url_for('static',filename='img/icon/corn-5.png') }}" type="image/x-icon">
-<link rel="icon" href="{{ url_for('static',filename='img/icon/corn-5.png') }}" type="image/x-icon">
+<link rel="shotcut icon" href="{{ url_for('static',filename='img/icon/icon-1.png') }}" type="image/x-icon">
+<link rel="icon" href="{{ url_for('static',filename='img/icon/icon-1.png') }}" type="image/x-icon">
 {% endblock %}
 {% block styles %}
     <link rel="stylesheet" href="{{ url_for('static',filename='css/bootstrap.min.css') }}">
@@ -36,7 +36,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a href="{{ url_for('main.index') }}" class="navbar-brand">
-                    <img src="{{ url_for('static',filename='img/icon/corn-4.png') }}" width="30" height="40" alt="LOL">
+                    <img src="{{ url_for('static',filename='img/icon/logo-1.png') }}" width="120" height="40" alt="LOL">
                 </a>
             </div>
             <div class="collapse navbar-collapse">
