update logo banner and icon

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,8 +6,8 @@
 {% endblock %}
 {% block head %}
 {{ super() }}
-<link rel="shotcut icon" href="{{ url_for('static',filename='img/icon/icon-1.png') }}" type="image/x-icon">
-<link rel="icon" href="{{ url_for('static',filename='img/icon/icon-1.png') }}" type="image/x-icon">
+<link rel="shotcut icon" href="{{ url_for('static',filename='img/icon/corn-5.png') }}" type="image/x-icon">
+<link rel="icon" href="{{ url_for('static',filename='img/icon/corn-5.png') }}" type="image/x-icon">
 {% endblock %}
 {% block styles %}
     <link rel="stylesheet" href="{{ url_for('static',filename='css/bootstrap.min.css') }}">
