--- a/app/templates/query.html
+++ b/app/templates/query.html
@@ -12,7 +12,7 @@
                     <li><a href="#">LCK</a></li>
                     <li><a href="#">LMS</a></li>
                     <li><a href="#">LCS</a></li>
-                    <li><a href="#">路人</a></li>
+                    <li><a href="#">路人王</a></li>
                 </ul>
             </div>
         </div>
@@ -59,7 +59,7 @@
                     <li><a href="#">中单</a></li>
                     <li><a href="#">ADC</a></li>
                     <li><a href="#">辅助</a></li>
-                    <li><a href="#">路人</a></li>
+                    <li><a href="#">路人王</a></li>
                 </ul>
             </div>
         </div>
